<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favourites</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_setting">Setting</string>

    <string name="delete">Delete</string>
    <string name="monday">Monday</string>
    <string name="cloudy">cloudy</string>
    <string name="giza_egypt">Giza,Egypt</string>
    <string name="time_date">12:00 19,Aug2022</string>
    <string name="clear_sky">Clear sky</string>
    <string name="_21_c">21º C</string>

    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="meter">Meter / Sec</string>
    <string name="mile">Mile / Hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="notification">Notification</string>

    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="ultra_violet">Ultra violet</string>
    <string name="visibility">Visibility</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="alert">alert</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <string name="save">Save</string>
    <string name="dismiss">dismiss</string>
    <string name="search_place">Search for a place</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="details">Details</string>
    <string name="no_location_alerts">No Location Alerts</string>
    <string name="no_favourite_locations">No Favourite Locations</string>

    <string name="duration">Duration : </string>
    <string name="location_is_not_enabled">Location is not enabled</string>


</resources>