<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/language_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/language_textview"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/language"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/lang_options_cardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/language_cardView"
        app:layout_constraintEnd_toEndOf="@id/language_cardView"
        app:layout_constraintStart_toStartOf="@id/language_cardView">

            <RadioGroup
                android:id="@+id/language_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/english_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_marginStart="15dp"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/arabic_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/arabic"
                    />
            </RadioGroup>
</androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/location_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/language_cardView">

        <TextView
            android:id="@+id/location_textview"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/location"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/side_nav_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/location_options_cardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/location_cardView"
        app:layout_constraintEnd_toEndOf="@id/location_cardView"
        app:layout_constraintStart_toStartOf="@id/location_cardView">

        <RadioGroup
            android:id="@+id/location_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/gps_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginStart="15dp"
                android:text="@string/gps"/>

            <RadioButton
                android:id="@+id/map_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/map"
                />
        </RadioGroup>
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:id="@+id/temp_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/lang_options_cardView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/temp_textview"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/temperature"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/side_nav_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/temp_options_cardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/temp_cardView"
        app:layout_constraintEnd_toEndOf="@id/temp_cardView"
        app:layout_constraintStart_toStartOf="@id/temp_cardView">

        <RadioGroup
            android:id="@+id/temp_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/celsius_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginStart="15dp"
                android:text="@string/celsius" />

            <RadioButton
                android:id="@+id/kelvin_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/kelvin"
                />
            <RadioButton
                android:id="@+id/fahrenheit_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/fahrenheit"
                />

        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/wind_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/location_options_cardView"
        app:layout_constraintStart_toEndOf="@id/temp_cardView">

        <TextView
            android:id="@+id/wind_textview"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/wind_speed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/side_nav_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/wind_options_cardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/wind_cardView"
        app:layout_constraintEnd_toEndOf="@id/wind_cardView"
        app:layout_constraintStart_toStartOf="@id/wind_cardView">

        <RadioGroup
            android:id="@+id/wind_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/meter_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginStart="15dp"
                android:text="@string/meter" />

            <RadioButton
                android:id="@+id/mile_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/mile"
                />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notif_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/temp_options_cardView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/notif_textview"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/notification"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/side_nav_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notif_options_cardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/notif_cardView"
        app:layout_constraintEnd_toEndOf="@id/notif_cardView"
        app:layout_constraintStart_toStartOf="@id/notif_cardView">

        <RadioGroup
            android:id="@+id/notif_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/enable_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginStart="15dp"
                android:text="@string/enable" />

            <RadioButton
                android:id="@+id/disable_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/disable"
                />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>