<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:ignore="MissingDefaultResource"
    tools:context=".setting.view.InitialSettingFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/side_nav_bar">

            <ImageView
                android:id="@+id/logo_imageView"
                android:src="@drawable/logo"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/fromTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_imageView"
                />

            <RadioGroup
                android:id="@+id/location_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@id/fromTv"
                app:layout_constraintTop_toBottomOf="@id/logo_imageView"
                app:layout_constraintStart_toStartOf="@id/languag_radio_group">

                <RadioButton
                    android:id="@+id/gps_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/black"
                    android:text="@string/gps"/>

                <RadioButton
                    android:id="@+id/map_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:buttonTint="@color/black"
                    android:text="@string/map"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/toTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="18dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fromTv"
                />

            <RadioGroup
                android:id="@+id/languag_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-10dp"
                android:layout_marginStart="15dp"
                android:buttonTint="@color/black"
                app:layout_constraintStart_toEndOf="@id/toTv"
                app:layout_constraintTop_toTopOf="@id/toTv"
                >

                <RadioButton
                    android:id="@+id/english_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/black"
                    android:layout_marginStart="15dp"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/arabic_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:buttonTint="@color/black"
                    android:text="@string/arabic"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/notificationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toTv"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="80dp"
                android:checked="true"
                app:trackTint="@color/white"
                app:layout_constraintStart_toEndOf="@id/notificationTv"
                app:layout_constraintTop_toBottomOf="@id/toTv"
                app:layout_constraintStart_toStartOf="@id/languag_radio_group"/>

            <TextView
                android:id="@+id/okTv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="38dp"
                android:gravity="center"
                android:text="OK"
                android:textStyle="bold"
                android:background="@drawable/rounded_btn"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
