<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:ignore="MissingDefaultResource"
    tools:context=".alert.view.AlertDialogFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="11dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/side_nav_bar"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/logo_imageView"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/baseline_notifications_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/from_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_imageView">

                <TextView
                    android:id="@+id/language_textview"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/side_nav_bar"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/from_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/from_cardView"
                app:layout_constraintStart_toStartOf="@id/from_cardView"
                app:layout_constraintTop_toBottomOf="@id/from_cardView">

                <androidx.cardview.widget.CardView
                    android:id="@+id/from_date_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/from_date_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:drawableStart="@drawable/baseline_edit_calendar_24"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:hint="@string/start_date"
                        android:textColorHint="@color/teal_700"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/from_time_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/from_time_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:drawableStart="@drawable/baseline_more_time_24"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:hint="@string/start_time"
                        android:textColorHint="@color/teal_700"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/to_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toEndOf="@id/from_cardView"
                app:layout_constraintTop_toBottomOf="@id/logo_imageView">

                ///////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/to_textview"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/side_nav_bar"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/to_cardView"
                app:layout_constraintStart_toStartOf="@id/to_cardView"
                app:layout_constraintTop_toBottomOf="@id/to_cardView">

                <androidx.cardview.widget.CardView
                    android:id="@+id/to_date_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/to_date_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:drawableStart="@drawable/baseline_edit_calendar_24"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:hint="@string/end_date"
                        android:textColorHint="@color/teal_700"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/to_time_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/to_time_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:drawableStart="@drawable/baseline_more_time_24"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:textColorHint="@color/teal_700"
                        android:hint="@string/end_time"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <RadioGroup
                android:id="@+id/alert_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:buttonTint="@color/black"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_linearLayout">

                <RadioButton
                    android:id="@+id/alert_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/alert" />

                <RadioButton
                    android:id="@+id/notification_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:buttonTint="@color/black"
                    android:text="@string/notification" />
            </RadioGroup>


            <TextView
                android:id="@+id/cancelTv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/okTv"
                app:layout_constraintTop_toTopOf="@id/okTv" />

            <TextView
                android:id="@+id/okTv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="65dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:text="@string/ok"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alert_radio_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>